@@ -1,3 +1,10 @@
+2022-08-05T16:22:51Z:
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 249 431 / 267 467
+* notice: next accum: outdated-unq outdated-all / unq all: 249 431 / 267 466
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-22]
+
 2022-08-05T08:19:30Z:
 * notice: last 14d: unq all: 4 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 249 431 / 266 466
